# avrcpp

./: CMakeLists.txt  README.md
cmake/: arduino.cmake  avr-gcc-atmega328p.cmake
include/: cstddef  cstdint  initializer_list  limits  new  ratio  tuple  type_traits  utility
include/avrcpp/: testing.hpp
include/std/: cstddef.hpp  cstdint.hpp  limits.hpp  make-from-tuple.hpp  new.hpp  ratio.hpp  tuple.hpp  type_traits.hpp  utility.hpp
scripts/: build-toolchain.sh
src/: testing.cxx
test/: CMakeLists.txt  build-test.cxx  testing-framework.cxx
test/1/: CMakeLists.txt  main.cxx
